test/fixtures/invalid/multiple_errors.blade.php
@if($condition)
    <p>Content</p>
    <!-- Missing @endif -->

{{ $unclosed

@foreach($items as $item)
    {{ $item }}
    <!-- Missing @endforeach -->
